refactor: standardize quote usage and improve readability in form handling scripts
- Changed single quotes to double quotes for consistency in error handling and DOM queries.
- Reformatted multi-line queries for better readability.
- Enhanced error handling logic to ensure clarity in success and error message displays.

--- a/index-dev.html
+++ b/index-dev.html
@@ -393,7 +393,7 @@
         } catch (error) {
           clearTimeout(timeoutId);
 
-          if (error.name === 'AbortError') {
+          if (error.name === "AbortError") {
             return {
               success: false,
               error: "timeout_error",
@@ -452,7 +452,9 @@
           let caregiverRelationship = null;
 
           // First, check if the input field has a value attribute
-          const caregiverInput = document.querySelector(`input[name="aces_startherecaregiverrelationship"]`);
+          const caregiverInput = document.querySelector(
+            `input[name="aces_startherecaregiverrelationship"]`,
+          );
           if (caregiverInput && caregiverInput.value) {
             caregiverRelationship = caregiverInput.value;
           } else {
@@ -478,7 +480,9 @@
 
       // Process phone fields to format phone numbers in payload
       const processPhoneFields = (payload) => {
-        const phoneFields = document.querySelectorAll('input[type="tel"]:not([name="address2_telephone1"])');
+        const phoneFields = document.querySelectorAll(
+          'input[type="tel"]:not([name="address2_telephone1"])',
+        );
 
         phoneFields.forEach((phoneField) => {
           if (phoneField.itiInstance && phoneField.value.trim()) {
@@ -487,17 +491,17 @@
               const formattedNumber = phoneField.itiInstance.getNumber();
 
               // Find corresponding field in payload
-              const fieldName = phoneField.getAttribute('name');
+              const fieldName = phoneField.getAttribute("name");
               if (fieldName) {
                 const phonePayloadField = payload.fields.find(
-                  (item) => item.key === fieldName
+                  (item) => item.key === fieldName,
                 );
                 if (phonePayloadField) {
                   phonePayloadField.value = formattedNumber;
                 }
               }
             } catch (error) {
-              console.warn('Failed to format phone number:', error);
+              console.warn("Failed to format phone number:", error);
             }
           }
         });
@@ -540,7 +544,9 @@
                 btn.onclick ? `onclick="${btn.onclick}"` : ""
               } class="dialog-button ${
                 btn.className || "dialog-button-primary"
-              }" ${btn.style ? `style="${btn.style}"` : ""}>${btn.text}</button>`,
+              }" ${btn.style ? `style="${btn.style}"` : ""}>${
+                btn.text
+              }</button>`,
           )
           .join("");
 
@@ -600,7 +606,6 @@
           icon: "spinner",
           hideCloseButton: true,
         });
-
       };
 
       const showSuccessMessage = (payload) => {
@@ -778,11 +783,15 @@
 
         // Update msdyncrm_leadid field with email value
         if (formEmail) {
-          const leadIdInput = document.querySelector(`input[name='msdyncrm_leadid']`);
+          const leadIdInput = document.querySelector(
+            `input[name='msdyncrm_leadid']`,
+          );
           if (leadIdInput) {
             leadIdInput.value = formEmail;
             // Also update in payload if field exists
-            const leadIdField = payload.fields.find(field => field.key === 'msdyncrm_leadid');
+            const leadIdField = payload.fields.find(
+              (field) => field.key === "msdyncrm_leadid",
+            );
             if (leadIdField) {
               leadIdField.value = formEmail;
             }
@@ -808,10 +817,13 @@
           if (result.success) {
             showSuccessMessage(payload);
           } else {
-            if (result.status === 400) {
+            if (result.status >= 400 && result.status < 500) {
               // All 400 errors show success-style dialog but no redirect
               showApplicationReviewMessage();
-            } else if (result.status === 500 || result.status === 504 || result.error === "timeout_error") {
+            } else if (
+              result.status >= 500 ||
+              result.error === "timeout_error"
+            ) {
               // For 500, 504 errors, and timeouts, show delayed message with success styling
               showDialog({
                 dialogClass: "success-dialog",
@@ -831,7 +843,23 @@
                 ],
               });
             } else {
-              showErrorMessage("unknown_error");
+              showDialog({
+                dialogClass: "success-dialog",
+                title: messages.delayed.title,
+                titleTag: "h1",
+                titleClass: "dialog-title-large",
+                message: messages.delayed.message,
+                messageClass: "dialog-message-large",
+                icon: "success",
+                iconContainer: "success-icon-container",
+                buttons: [
+                  {
+                    text: "OK",
+                    onclick: "document.getElementById('form-dialog').remove()",
+                    className: "dialog-button-success",
+                  },
+                ],
+              });
             }
           }
         } catch (error) {
@@ -876,11 +904,13 @@
 
       document.addEventListener("d365mkt-afterformload", function () {
         // Capture email field value for lead ID tracking
-        const emailInput = document.querySelector(`input[name='emailaddress1']`);
+        const emailInput = document.querySelector(
+          `input[name='emailaddress1']`,
+        );
         if (emailInput) {
           formEmail = emailInput.value;
         }
-        
+
         // Add custom validation to email field
         const emailField = document.querySelector('input[type="email"]');
         if (emailField) {
@@ -893,7 +923,9 @@
 
         // Initialize intl-tel-input for phone fields with country flags
         const initializePhoneFields = () => {
-          const phoneFields = document.querySelectorAll('input[type="tel"]:not([name="address2_telephone1"])');
+          const phoneFields = document.querySelectorAll(
+            'input[type="tel"]:not([name="address2_telephone1"])',
+          );
 
           phoneFields.forEach((phoneField) => {
             // Skip if already initialized
