--- a/index-stage.html
+++ b/index-stage.html
@@ -252,6 +252,7 @@
         successRedirectUrl:
           "https://client-connect-stage.powerappsportals.com/",
         contactSupportUrl: "https://www.acesaba.com/contact",
+        thankyouPageUrl: "https://www.acesaba.com/aces/thank-you",
       };
 
       // Unified messages object containing all dialog messages
@@ -837,7 +838,7 @@
                 buttons: [
                   {
                     text: "OK",
-                    onclick: "document.getElementById('form-dialog').remove()",
+                    onclick: `window.location.href='${formConfig.thankyouPageUrl}'`,
                     className: "dialog-button-success",
                   },
                 ],
@@ -855,7 +856,7 @@
                 buttons: [
                   {
                     text: "OK",
-                    onclick: "document.getElementById('form-dialog').remove()",
+                    onclick: `window.location.href='${formConfig.thankyouPageUrl}'`,
                     className: "dialog-button-success",
                   },
                 ],
@@ -878,7 +879,7 @@
             buttons: [
               {
                 text: "OK",
-                onclick: "document.getElementById('form-dialog').remove()",
+                onclick: `window.location.href='${formConfig.thankyouPageUrl}'`,
                 className: "dialog-button-success",
               },
             ],
